AX: native popup buttons should not use textUnderElement for their title https://bugs.webkit.org/show_bug.cgi?id=106349

Reviewed by Ryosuke Niwa.

Native popup buttons (<select> elements) were calculating its title based on the text
under the element. When Bug 103794 introduced a more complete way of getting render text,
it causes popup buttons to start returning a title.
The fix is that we should not be calculating a title for a native popup button from its children.

Existing tests cover this functionality. This will fix a failing test.

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::visibleText):



Canonical link: https://commits.webkit.org/124547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139091 268f45cc-cd09-0410-ab3c-d52691b4dbfc